--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,5 @@
-PORT= 3000
+PORT=3000
 
-MONGODB_URI="mongodb+srv://okashaabdalla44:H0uQQJbgkTvwuMYe@cluster0.q2p8ibk.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
-JWT_SECRET=your_jwt_secret:
+MONGODB_URI="mongodb+srv://okashaabdalla44:H0uQQJbgkTvwuMYe@cluster0.q2p8ibk.mongodb.net/mern-chat?retryWrites=true&w=majority&appName=Cluster0"
+
+JWT_SECRET=your_jwt_secret
